--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -56,8 +56,8 @@
           {% else %}
           <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
             <!-- SETTINGS -->
-            <div class="max-sm:text-center py-6 px-3 mt-32 sm:mt-0">
-              <a href="{% url 'accounts:edit_account' user.pk %}" class="btn btn-outline" type="button">
+            <div class="max-sm:text-center pt-6 pb-4 px-3 mt-28 sm:mt-0">
+              <a href="{% url 'accounts:edit_account' user.pk %}" class="btn btn-sm " type="button">
                 <svg class="w-5 h-5 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
                 settings
               </a>
