--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -19,18 +19,17 @@
 
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <div class="grid grid-cols-1 mb-6">
-      <!-- <textarea class="textarea textarea-bordered" name="description" id="" cols="30" rows="2">{{photo.description}}</textarea> -->
+    <div class="grid grid-cols-1 mb-6 lg:mb-10">
       {{form_description_form}}
     </div>
     <div class="flex flex-col w-full lg:flex-row">
       <div class="grid flex-grow h-24 lg:h-32 card bg-base-300 rounded-box place-items-center">
         <div class="flex gap-4">
-          <button type="button" class="btn btn-outline" onclick="rotateImage(-90)">
+          <button type="button" class="btn btn-outline" id="rotate_btn" onclick="rotateImage(-90)">
             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M6.23706 2.0007C6.78897 2.02117 7.21978 2.48517 7.19931 3.03708L7.10148 5.67483C8.45455 4.62548 10.154 4.00001 12 4.00001C16.4183 4.00001 20 7.58174 20 12C20 16.4183 16.4183 20 12 20C7.58172 20 4 16.4183 4 12C4 11.4477 4.44772 11 5 11C5.55228 11 6 11.4477 6 12C6 15.3137 8.68629 18 12 18C15.3137 18 18 15.3137 18 12C18 8.68631 15.3137 6.00001 12 6.00001C10.4206 6.00001 8.98317 6.60994 7.91098 7.60891L11.3161 8.00677C11.8646 8.07087 12.2573 8.56751 12.1932 9.11607C12.1291 9.66462 11.6325 10.0574 11.0839 9.99326L5.88395 9.38567C5.36588 9.32514 4.98136 8.87659 5.00069 8.35536L5.20069 2.96295C5.22116 2.41104 5.68516 1.98023 6.23706 2.0007Z"></path></svg>
           </button>
           <!-- <input type="hidden" name="rotate" value="rotate"> -->
-          <span class="hidden transform -scale-x-100"></span>
+          <span class="hidden transform -scale-x-100 file-input file-input-sm"></span>
           <button type="button" class="btn btn-outline" id="mirror_flip_btn">
             <svg class="w-6 h-6 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M3 12C3 16.2426 3 18.364 4.31802 19.682C5.63604 21 7.75736 21 12 21M12 3C7.75736 3 5.63604 3 4.31802 4.31802C3.50241 5.13363 3.19151 6.25685 3.073 8" stroke-width="1.5" stroke-linecap="round"></path> <path d="M11 21H15C17.8284 21 19.2426 21 20.1213 20.1213C21 19.2426 21 17.8284 21 15V9C21 6.17157 21 4.75736 20.1213 3.87868C19.2426 3 17.8284 3 15 3H11" stroke-width="1.5" stroke-linecap="round" stroke-dasharray="2.5 3"></path> <path d="M12 22L12 2" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
           </button>
@@ -38,22 +37,39 @@
       </div>
       <div class="divider lg:divider-horizontal">OR</div>
 
-        <div class="grid flex-grow h-44 sm:h-32 card bg-base-300 rounded-box place-items-center">
+        <div class="grid flex-grow h-28 sm:h-32 card bg-base-300 rounded-box place-items-center">
           <p class="font-semibold sm:text-lg">Replace the photo with a new one :</p>
           <div class="flex flex-wrap place-content-center gap-4">
 
             <div class="flex gap-4">
-              <div class="self-center animate-bounce">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
+              <div class="self-center">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
                 </svg>
               </div>
-              {{ photo_update_form }}
+              {{ photo_update_form.upload_photo }}
+              {{photo_update_form.rotation_angle}}
+              {{photo_update_form.mirror_flip}}
             </div>
           </div>
         </div>
       <br>
     </div>
+    <!-- default photo toggle button-->
+    <div class="my-6 lg:mt-10 flex gap-4 place-content-center">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+      </svg>
+      {% if photo.is_default %}
+        <label for="choose-as-default">This photo is your Album cover</label>
+      {% else %}
+        <label for="choose-as-default">Choose this photo as your Album cover</label>
+      {% endif %}
+      {{ photo_update_form.set_as_default_photo}}
+    </div>
+
+    <br>
+    <hr>
     <div class="flex mt-6 gap-4">
       <div class="flex-1">
         <a href="{% url 'photos:photo_detail' photo.pk %}" class="btn btn-neutral w-40">
@@ -64,13 +80,28 @@
           Back
         </a>
       </div>
-      <input type="submit" value="Save changes" class="border border-base-content hover:bg-base-content hover:text-base-100 w-full rounded-lg px-4">
+      <input type="submit" value="Save changes" class="border border-base-content hover:bg-base-content hover:text-base-100 w-full rounded-lg px-4 uppercase font-semibold cursor-pointer ease-in-out duration-300">
     </div>
   </form>
 </div>
 
+{% if photo_update_form.errors %}
+    {% for field in photo_update_form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in photo_update_form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
+
+{% endblock body %}
+
 {% block javascript %}
 <script src="{% static 'photos/js/photo_edit.js' %}"></script>
 {% endblock javascript %}
-
-{% endblock body %}
