--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="relative flex-1 px-4 mt-5 sm:px-5">
                       <div class="absolute inset-0 px-4 sm:px-5">
-                        <div class="relative h-full overflow-hidden border border-dashed rounded-md border-neutral-300">
+                        <div class="relative h-full overflow-hidden border rounded-md border-neutral-300">
                           {% if all_notifications %}
                             <h2 class="font-semibold text-lg my-3 px-4 py-1 rounded-2xl bg-gray-100 dark:text-slate-700 w-fit mx-auto shadow-md"><span id="notif-indicator" class="font-bold">{{all_notifications.count}}</span>&nbsp;notification{{all_notifications.count|pluralize}} :</h2>
                           {% endif %}
