--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -55,7 +55,6 @@
   <!-- custom js script -->
   <script src="{% static 'js/script.js' %}"></script>
   <!-- AOS for notifications panel-->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
+  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">AOS.init();</script> -->
   {% block javascript %}{% endblock %}
 </html>
