fixed responsive design issues

--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -32,7 +32,7 @@
         <form method="POST">
           {% csrf_token %}
           <div class="grid grid-cols-1 p-6 lg:p-12 mx-auto gap-x-4 max-w-7xl ">
-            <div class=" mt-4 block space-y-4 w-full mx-auto max-w-xl bg-base-100 p-6">
+            <div class=" mt-4 block space-y-4 w-full mx-auto max-w-lg bg-base-100 ">
               <div class="flex gap-4 prose">
                 <h2 class="mb-4">Edit your album infos</h2>
                 <svg viewBox="0 0 24 24" class="fill-transparent stroke-current stroke-2 h-8 w-8" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
               {% endfor %}
             </div>
 
-            <div class=" my-8 mx-auto max-w-xl w-full bg-base-100 p-6">
+            <div class=" my-8 mx-auto max-w-lg w-full bg-base-100 ">
               <a name="access_control"></a>
               <div class="flex gap-4 prose">
                 <h2>Control your privacy</h2>
@@ -66,9 +66,9 @@
 
                   <thead>
                     <tr class="bg-base-300">
-                      <th></th>
-                      <th>Name</th>
-                      <th>Relation</th>
+                      <th>Access</th>
+                      <th>Full Name</th>
+                      {#<th>Relation</th>#}
                     </tr>
                   </thead>
                   <tbody>
@@ -100,16 +100,17 @@
                             </div>
                             <div>
                               <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
-                              <div class="text-sm opacity-50">{{relation.email|truncatechars:12}}</div>
+                              <p class="text-sm opacity-50 text-ellipsis">{{relation.email}}</p>
                             </div>
                           </div>
                         </a>
                       </td>
+                      {% comment %}
                       <td>
                         <span class="badge badge-ghost badge-sm">{{relation_type}}</span>
                       </td>
+                      {% endcomment %}
                     </tr>
-
                     {% endfor %}
                   </tbody>
                 </table>
@@ -141,8 +142,8 @@
 
 
             <hr class="">
-            <div class="mt-10 flex flex-wrap gap-4 ">
-              <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral">
+            <div class="mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 ">
+              <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral order-1">
                 <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
                   <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
                   <path
@@ -151,12 +152,12 @@
                 </svg>
                 Back
               </a>
-              <button type="submit" name="album_form" class="flex gap-4 btn btn-primary text-white">
+              <button type="submit" name="album_form" class="flex gap-4 btn btn-primary sm:col-span-2 md:col-span-1 order-2 sm:order-3 md:order-2">
                 <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.1716 1C18.702 1 19.2107 1.21071 19.5858 1.58579L22.4142 4.41421C22.7893 4.78929 23 5.29799 23 5.82843V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4C1 2.34315 2.34315 1 4 1H18.1716ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21L5 21L5 15C5 13.3431 6.34315 12 8 12L16 12C17.6569 12 19 13.3431 19 15V21H20C20.5523 21 21 20.5523 21 20V6.82843C21 6.29799 20.7893 5.78929 20.4142 5.41421L18.5858 3.58579C18.2107 3.21071 17.702 3 17.1716 3H17V5C17 6.65685 15.6569 8 14 8H10C8.34315 8 7 6.65685 7 5V3H4ZM17 21V15C17 14.4477 16.5523 14 16 14L8 14C7.44772 14 7 14.4477 7 15L7 21L17 21ZM9 3H15V5C15 5.55228 14.5523 6 14 6H10C9.44772 6 9 5.55228 9 5V3Z" fill="currentColor"></path></svg>
                 Save changes
               </button>
 
-              <a href="{% url 'albums:album_delete' album.pk %}" class="btn btn-outline btn-error">
+              <a href="{% url 'albums:album_delete' album.pk %}" class="btn btn-outline btn-error order-3 sm:order-2 md:order-3">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                   class="h-5 w-5">
                   <path stroke-linecap="round" stroke-linejoin="round"
