--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -38,15 +38,16 @@
       <div class="divider lg:divider-horizontal">OR</div>
 
         <div class="grid flex-grow h-28 sm:h-32 card bg-base-300 rounded-box place-items-center">
-          <p class="font-semibold sm:text-lg">Replace the photo with a new one :</p>
+          <div class="flex flex-wrap-reverse gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6 mb-0.5 sm:mb-1">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
+            </svg>
+            <p class="font-semibold sm:text-lg">Replace this photo :</p>
+          </div>
           <div class="flex flex-wrap place-content-center gap-4">
 
-            <div class="flex gap-4">
-              <div class="self-center">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
-                </svg>
-              </div>
+            <div >
+
               {{ photo_update_form.upload_photo }}
               {{photo_update_form.rotation_angle}}
               {{photo_update_form.mirror_flip}}
@@ -56,23 +57,23 @@
       <br>
     </div>
     <!-- default photo toggle button-->
-    <div class="my-6 lg:mt-10 flex gap-4 place-content-center">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+    <div class="my-6 lg:mt-10 flex gap-3 sm:gap-4 place-content-center">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
       </svg>
       {% if photo.is_default %}
-        <label for="choose-as-default">This photo is your Album cover</label>
+        <label for="choose-as-default" class="font-semibold sm:text-lg">This photo is your Album cover</label>
       {% else %}
-        <label for="choose-as-default">Choose this photo as your Album cover</label>
+        <label for="choose-as-default" class="font-semibold sm:text-lg">Choose this photo as your Album cover</label>
       {% endif %}
       {{ photo_update_form.set_as_default_photo}}
     </div>
 
     <br>
     <hr>
-    <div class="flex mt-6 gap-4">
-      <div class="flex-1">
-        <a href="{% url 'photos:photo_detail' photo.pk %}" class="btn btn-neutral w-40">
+    <div class="grid grid-cols-1 sm:grid-cols-2 mt-6 gap-4">
+      <div class="flex">
+        <a href="{% url 'photos:photo_detail' photo.pk %}" class="btn btn-block btn-neutral">
           <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
             <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
             <path d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path>
@@ -80,7 +81,7 @@
           Back
         </a>
       </div>
-      <input type="submit" value="Save changes" class="border border-base-content hover:bg-base-content hover:text-base-100 w-full rounded-lg px-4 uppercase font-semibold cursor-pointer ease-in-out duration-300">
+      <input type="submit" value="Save changes" class="btn btn-block btn-outline">
     </div>
   </form>
 </div>
