--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -68,7 +68,7 @@
       {% endif %}
       {{ photo_update_form.set_as_default_photo}}
     </div>
-
+    <p>{{users_with_photo_access}}</p>
     <br>
     <hr>
     <div class="grid grid-cols-1 sm:grid-cols-2 mt-6 gap-4">
